# dh-fast-code-contest

./: .gitignore  README.md  runner.cpp  skeleton.cpp
001-rekt/: README.md  generate  generate.cpp  generatef  runner  runner.cpp  skeleton.cpp
001-rekt/cpp/: README.md  rekt.cpp  rekt.hpp  runner.cpp
001-rekt/go/: README.md  rekt.go  runner.go
001-rekt/go/submissions/: init.go
001-rekt/lua/: .gitignore  Makefile  README  README.md  main.c  test  test.c
001-rekt/lua/ext/lua/src/: Makefile  lua  luac
001-rekt/lua/scripts/: pack.lua
001-rekt/lua/src/: collections.lua  main.lua  utils.lua
001-rekt/python/: README.md  rekt.py
001-rekt/submissions/agauniyal/: rekt.cpp  rekt.hpp  runner.cpp
001-rekt/submissions/doctorcat/: Cargo.toml
001-rekt/submissions/doctorcat/src/: analysis.rs  lib.rs  rpoint.rs  solution.rs  tree.rs
001-rekt/submissions/doctorcat/src/rtree/: boundingvolume.rs  misc.rs  mod.rs  point_traits.rs  traits.rs
001-rekt/submissions/dumptyd/: rekt.js
001-rekt/submissions/rep_movsd/: ha5.cpp
001-rekt/submissions/ryotsu/: run.go  types.go
001-rekt/submissions/sampriti/: 002.cpp
001-rekt/submissions/turtledev/: Makefile  README.md  main.lua  runner.lua
001-rekt/submissions/turtledev/src/: collections.lua  main.lua  types.lua  utils.lua
002-palt/: README.md  dump_image  dump_image.cpp  dump_palette  dump_palette.cpp  dump_png  dump_png.cpp  error  error.cpp  palt  reference.cpp
002-palt/generator/: dump_image.cpp  dump_palette.cpp
