[package]
name = "rectangles"
version = "0.1.0"
authors = ["Doctor Cat"]
publish = false

[lib]
crate-type= ["cdylib"]

[dependencies]
spade = "1.0.0"
nalgebra = "0.11.2"
lazy_static = "0.2.5"
num = "0.1.*"
order-stat = "0.1.3"
libc = "0.2.21"
rayon = "0.6.0"
simd = "0.2.0"

[dev-dependencies]
quickcheck = "0.4.1"