[package]
name = "rectangles"
version = "0.1.0"
authors = ["Doctor Cat"]
publish = false

[lib]
name = "rectangles"
crate-type= ["cdylib"]

[dependencies]
spade = "1.0.0"
num = "0.1"
lazy_static = "0.2.5"
order-stat = "0.1.3"
libc = "0.2.21"
simd = "0.2.0"
x86intrin = "0.4.2"
rayon = "0.7.0"
smallvec = "0.3.2"
itertools = "0.6.0"

[dev-dependencies]
quickcheck = "0.4.1"